--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="#EAEAEA"
-        tools:context="com.example.hejing.media.MainActivity">
+        tools:context="com.example.hejing.media.activity.MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,6 +31,7 @@
                 android:textSize="20dp"
                 android:layout_margin="5dp"/>
             <EditText
+                android:id="@+id/loginName"
               android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -54,16 +55,19 @@
                 android:textSize="20dp"
                 android:layout_margin="5dp"/>
             <EditText
+                android:id="@+id/loginPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:background="@null"
                 android:hint="请输入密码"
+                android:inputType="textPassword"
                 android:layout_margin="5dp"/>
         </LinearLayout>
         </LinearLayout>
 
         <Button
+            android:id="@+id/loginButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
