登录功能的彻底实现以及主页的基本布局

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,15 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.hejing.media.activity.HomeActivity">
+    android:background="#DCDCDC"
+    tools:context=".activity.MainActivity">
 
+    <RelativeLayout
 
-    <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/rlayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="主页"
-        />
-</android.support.constraint.ConstraintLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
+
+        <RadioGroup
+            android:id="@+id/rg_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/point"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:button="@null"
+                android:drawableTop="@drawable/selector_point"
+                android:gravity="center"
+                android:text="点位"
+                android:textColor="@color/main_botton_text_color"
+                android:textSize="18sp" />
+
+            <RadioButton
+                android:id="@+id/task"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:button="@null"
+                android:drawableTop="@drawable/selector_task"
+                android:gravity="center"
+                android:text="任务"
+                android:textColor="@color/main_botton_text_color"
+                android:textSize="18sp" />
+
+            <RadioButton
+                android:id="@+id/completed"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:button="@null"
+                android:drawableTop="@drawable/selector_completed"
+                android:gravity="center"
+                android:text="已完成"
+                android:textColor="@color/main_botton_text_color"
+                android:textSize="18sp" />
+
+            <RadioButton
+                android:id="@+id/set"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:button="@null"
+                android:drawableTop="@drawable/selector_set"
+                android:gravity="center"
+                android:text="设置"
+                android:textColor="@color/main_botton_text_color"
+                android:textSize="18sp" />
+
+        </RadioGroup>
+
+    </RelativeLayout>
+
+
+    <View
+        android:id="@+id/id_xian"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_above="@id/rlayout"
+        android:layout_marginBottom="5dp"
+        android:background="#2f2f29" />
+
+    <RelativeLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/id_xian">
+
+    </RelativeLayout>
+</RelativeLayout>
