--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DCDCDC"
-    tools:context=".activity.MainActivity">
+    tools:context=".activity.HomeActivity">
 
     <RelativeLayout
 
@@ -29,6 +29,7 @@
                 android:button="@null"
                 android:drawableTop="@drawable/selector_point"
                 android:gravity="center"
+                android:onClick="onCheckedChange"
                 android:text="点位"
                 android:textColor="@color/main_botton_text_color"
                 android:textSize="18sp" />
@@ -41,6 +42,7 @@
                 android:button="@null"
                 android:drawableTop="@drawable/selector_task"
                 android:gravity="center"
+                android:onClick="onCheckedChange"
                 android:text="任务"
                 android:textColor="@color/main_botton_text_color"
                 android:textSize="18sp" />
@@ -53,6 +55,7 @@
                 android:button="@null"
                 android:drawableTop="@drawable/selector_completed"
                 android:gravity="center"
+                android:onClick="onCheckedChange"
                 android:text="已完成"
                 android:textColor="@color/main_botton_text_color"
                 android:textSize="18sp" />
@@ -65,6 +68,7 @@
                 android:button="@null"
                 android:drawableTop="@drawable/selector_set"
                 android:gravity="center"
+                android:onClick="onCheckedChange"
                 android:text="设置"
                 android:textColor="@color/main_botton_text_color"
                 android:textSize="18sp" />
